# KIV-UPS

./: .gitmodules
semestralka/server/: .clang-tidy  .gitignore  CMakeLists.txt  justfile  lsan_suppressions.txt
semestralka/server/apps/client/: CMakeLists.txt
semestralka/server/apps/client/src/: board_renderer.cpp  board_renderer.h  consts.h  game_state.cpp  game_state.h  gui_helper.cpp  gui_helper.h  gui_state.cpp  gui_state.h  input_handler.cpp  input_handler.h  main.cpp  main.cpp.bak  renderer.cpp  renderer.h
semestralka/server/apps/server/: CMakeLists.txt
semestralka/server/apps/server/src/: main.cpp
semestralka/server/cmake/: CommonUtils.cmake  ExecutableTemplate.cmake  LibraryTemplate.cmake  TestTemplate.cmake
semestralka/server/src/: CMakeLists.txt  main.cpp
semestralka/server/src/hive/: CMakeLists.txt  board.cpp
semestralka/server/src/hive/include/hive/: board.h  messages.h  types.h
semestralka/server/src/hive/src/: board.cpp
semestralka/server/src/include/hive/: board.h  types.h
semestralka/server/src/include/net/: address.h  error.h  exception.h  file_descriptor.h  listener.h  socket.h  stream.h
semestralka/server/src/include/threadpool/: threadpool.h
semestralka/server/src/include/utils/: algebraic.h  functional.h  match.h  print.h
semestralka/server/src/net/: CMakeLists.txt  address.cpp  file_descriptor.cpp  listener.cpp  socket.cpp  stream.cpp
semestralka/server/src/net/include/net/: address.h  error.h  file_descriptor.h  socket.h  stream.h  tcp_iostream.h
semestralka/server/src/net/src/: address.cpp  error.cpp  file_descriptor.cpp  listener.cpp  socket.cpp  stream.cpp  tcp_iostream.cpp
semestralka/server/src/rayutils/: CMakeLists.txt
semestralka/server/src/rayutils/include/rayutils/: format.h  text.h
semestralka/server/src/threadpool/: CMakeLists.txt  threadpool.cpp
semestralka/server/src/threadpool/include/threadpool/: threadpool.h
semestralka/server/src/threadpool/src/: threadpool.cpp
semestralka/server/src/utils/include/utils/: format.h  generator.h  print.h  ranges.h  serde.h
semestralka/server/test/: CMakeLists.txt
semestralka/server/test/src/: address_tests.cpp  stream_tests.cpp
semestralka/server/test/unit/: CMakeLists.txt
semestralka/server/test/unit/hive/: message_tests.cpp
semestralka/server/test/unit/net/: address_tests.cpp  stream_tests.cpp
semestralka/server/test/unit/utils/: serde_tests.cpp
